git modified installing_main_tools

--- a/installing_main_tools.yml
+++ b/installing_main_tools.yml
@@ -2,11 +2,9 @@
 
 - hosts: all
   become: true
+  vars_files:
+  - vars.yml
   tasks:
-
-  - name: Checking if "Git" already exists in system 
-    package_facts: 
-      manager: "auto"
 
   - name: Installing Git 
     yum: 
@@ -14,10 +12,6 @@
       state: present
     when: "'git' not in ansible_facts.packages"
   
-  - name: report if git already exists 
-    debug:
-      msg: "The git already exists in the system, so skipping to next task"
-    when: "'git' in ansible_facts.packages"
 
   - name: installing lsof command
     yum: 
@@ -25,7 +19,48 @@
       state: present
     when: "'lsof' not in ansible_facts.packages"
 
-  - name: report if "lsof" already exists 
-    debug:
-      msg: "The "lsof" command already exists in the system, so skipping to next task"
-    when: "'lsof' in ansible_facts.packages"
+ 
+  - name: Creating node_exporter user group
+    group: name="{{group}}"
+    become: true
+ 
+  - name: Creating node_exporter user
+    user:
+      name: "{{user}}"
+      group: "{{group}}"
+      system: yes
+      shell: "/sbin/nologin"
+      comment: "{{user}} nologin User"
+      createhome: "no"
+      state: present
+ 
+  - name: Install prometheus node exporter
+    unarchive:
+      src: "https://github.com/prometheus/node_exporter/releases/download/v{{version}}/node_exporter-{{version}}.linux-amd64.tar.gz"
+      dest: /tmp/
+      remote_src: yes
+ 
+  - name: Copy prometheus node exporter file to bin
+    copy:
+      src: "/tmp/node_exporter-{{version}}.linux-amd64/node_exporter"
+      dest: "/usr/local/bin/node_exporter"
+      owner: "{{user}}"
+      group: "{{group}}"
+      remote_src: yes
+      mode: 0755
+ 
+  - name: Delete node exporter tmp folder
+    file:
+      path: '/tmp/node_exporter-{{version}}.linux-amd64'
+      state: absent
+        
+  - name: Copy systemd init file
+    template:
+      src: /home/ansible/exporter.service
+      dest: /etc/systemd/system/node_exporter.service
+ 
+  - name: Start node_exporter service
+    service:
+      name: node_exporter
+      state: started
+      enabled: yes
