git modified installing_main_tools

--- a/installing_main_tools.yml
+++ b/installing_main_tools.yml
@@ -7,9 +7,9 @@
   tasks:
 
 
-  name: Checking if git already exists in the system
-  package_facts:
-    manager: "auto"
+  - name: Checking if git already exists in the system
+    package_facts:
+      manager: "auto"
 
   - name: Installing Git 
     yum: 
