--- a/exporter.service
+++ b/exporter.service
@@ -4,8 +4,8 @@ Wants=network-online.target
 After=network-online.target
  
 [Service]
-User={{ user }}
-Group={{ group }}
+User={{ userId }}
+Group={{ groupId }}
 Restart=on-failure
 Type=simple
 ExecStart={{ exec_command }}
