--- a/vars.yml
+++ b/vars.yml
@@ -2,5 +2,5 @@
 groupId: node_group
 userId: nodeexporter_user
 version: "1.5.0"
-ServiceName: "node_exporter"
+serviceName: "node_exporter"
 exec_command: /usr/local/bin/node_exporter
