--- a/exporter.service
+++ b/exporter.service
@@ -1,11 +1,11 @@
 [Unit]
-Description={{serviceName}}
+Description={{service_name}}
 Wants=network-online.target
 After=network-online.target
  
 [Service]
-User={{ userId }}
-Group={{ groupId }}
+User={{ user }}
+Group={{ group }}
 Restart=on-failure
 Type=simple
 ExecStart={{ exec_command }}
