--- a/exporter.service
+++ b/exporter.service
@@ -1,5 +1,5 @@
 [Unit]
-Description={{service_name}}
+Description={{ nodeservice_name }}
 Wants=network-online.target
 After=network-online.target
  
